# chunking

./: .env  .gitignore  chunker.py  main.py  pyproject.toml  readme.md  summarize.py  unstructured_chunking.py  vector.py
src/: util.py
src/impl/: datastore.py  evaluator.py  generator.py  indexer.py  retriever.py
src/interface/: base_datastore.py  base_evaluator.py  base_generator.py  base_indexer.py  base_retriever.py
