[tool.poetry]
name = "chunking"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
pypdf = "^5.9.0"
pathlib = "^1.0.1"
pandas = "^2.3.1"
lancedb = "==0.24.2"
sentence-transformers = "^5.1.0"
matplotlib = "^3.10.5"
unstructured = "^0.18.11"
pdfminer-six = "^20250506"
pi-heif = "^1.1.0"
unstructured-inference = "^1.0.5"
pdf2image = "^1.17.0"
langchain-openai = "^0.3.29"
langchain-experimental = "^0.3.4"
pymupdf = "^1.26.3"
common = "^0.1.2"
lib = "^4.0.0"
openai = "^1.99.7"
semantic-text-splitter = "^0.27.0"
wakepy = "^0.10.2.post1"
duckdb = "^1.3.2"
advanced-chunker = "^0.1.4"
semchunk = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
